# c_compiler

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES
src/: ast.rs  generator.rs  lexer.rs  lib.rs  main.rs  parser.rs
temp/: temp.c  temp.s
tests/: e2e_tests.rs  test_returns.sh
tests/fixtures/invalid/format/: wrong_case.c
tests/fixtures/valid/binary/: associativity_1.c  associativity_2.c  div_3.c  mul_20.c  paren_27.c  sub_1.c
tests/fixtures/valid/unary/: bitwise_not_245.c  not_1.c
tests/invalid/format/: no_space.c
tests/valid/binary/: div_neg_5.c  precedence_18.c
tests/valid/format/: newlines_0.c
tests/valid/unary/: bitwise_not_255.c  negate_5.c  nested_ops_0.c  not_0.c
tests/valid/variables/: missing_return_1_0.c
